--- a/.github/workflows/pr-open.yml
+++ b/.github/workflows/pr-open.yml
@@ -26,8 +26,9 @@ jobs:
             Thanks for the PR!
 
             Any successful deployments (not always required) will be available below.
-            [Backend](https://${{ env.PREFIX }}-backend.${{ env.DOMAIN }}/) available
-            [Frontend](https://${{ env.PREFIX }}-frontend.${{ env.DOMAIN }}/) available
+            [Backend](https://${{ env.PREFIX }}-backend.${{ env.DOMAIN }}/)
+            [Frontend](https://${{ env.PREFIX }}-frontend.${{ env.DOMAIN }}/)
+            [Oracle-API](https://${{ env.PREFIX }}-oracle-api.${{ env.DOMAIN }}/)
 
             Once merged, code will be promoted and handed off to following workflow run.
             [Main Merge Workflow](https://github.com/${{ github.repository }}/actions/workflows/merge-main.yml)
@@ -40,9 +41,7 @@ jobs:
           oc_token: ${{ secrets.OC_TOKEN }}
           file: common/openshift.init.yml
           overwrite: false
-          parameters:
-            -p ZONE=${{ github.event.number }} -p NAME=${{ github.event.repository.name }}
-            -p ORACLE_DB_PASSWORD=${{ secrets.ORACLE_DB_PASSWORD }}
+          parameters: -p ZONE=${{ github.event.number }} -p NAME=${{ github.event.repository.name }}
 
   builds:
     name: Builds
@@ -79,7 +78,7 @@ jobs:
     runs-on: ubuntu-22.04
     strategy:
       matrix:
-        name: [database, backend, frontend]
+        name: [database, backend, frontend, oracle-api]
         include:
           - name: database
             file: database/openshift.deploy.yml
@@ -96,7 +95,7 @@ jobs:
             verification_path: "actuator/health"
             parameters:
               -p REACT_APP_SPAR_BUILD_VERSION=snapshot-${{ github.event.number }}
-              -p REACT_APP_SERVER_URL=https://nr-spar-backend-test-backend.apps.silver.devops.gov.bc.ca
+              -p REACT_APP_SERVER_URL=https://nr-spar-${{ github.event.number }}-backend.apps.silver.devops.gov.bc.ca
               -p REACT_APP_NRSPARWEBAPP_VERSION=dev
               -p REACT_APP_KC_URL=https://test.loginproxy.gov.bc.ca/auth
               -p REACT_APP_KC_REALM=standard
@@ -123,84 +122,84 @@ jobs:
             -p PROMOTE=${{ github.repository }}/${{ matrix.name }}:${{ github.event.number }}
             ${{ matrix.parameters }}
 
-  # tests-api:
-  #   name: API Tests
-  #   needs:
-  #     - deploys
-  #   env:
-  #     TARGET: ${{ github.event.repository.name }}-${{ github.event.number }}-oracle-api.apps.silver.devops.gov.bc.ca
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - uses: actions/setup-node@v3
-  #       with:
-  #         node-version: 16
-  #     - run: |
-  #         # Install newman
-  #         npm install -g newman
-  #         npm install -g newman-reporter-htmlextra
-  #         mkdir -p testArtifacts
+  tests-api:
+    name: API Tests
+    needs:
+      - deploys
+    env:
+      TARGET: ${{ github.event.repository.name }}-${{ github.event.number }}-oracle-api.apps.silver.devops.gov.bc.ca
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+      - run: |
+          # Install newman
+          npm install -g newman
+          npm install -g newman-reporter-htmlextra
+          mkdir -p testArtifacts
 
-  #     - run: |
-  #         # Run Postman Collection
-  #         newman run oracle-api/test/postman/oracle-api.postman_collection.json \
-  #           -e oracle-api/test/postman/oracle-api.postman_environment.json \
-  #           --env-var "apiAddr=${{ env.TARGET }}" \
-  #           --env-var "releaseVer=snapshot-${{ github.event.number }}" \
-  #           --env-var "authServer=${{ secrets.KEYCLOAK_SERVER_REALM }}" \
-  #           --env-var "authClient=${{ secrets.KC_SERVICE_ACCOUNT_NAME }}" \
-  #           --env-var "authClient=${{ secrets.KC_SERVICE_ACCOUNT_PASS }}"
+      - run: |
+          # Run Postman Collection
+          newman run oracle-api/test/postman/oracle-api.postman_collection.json \
+            -e oracle-api/test/postman/oracle-api.postman_environment.json \
+            --env-var "apiAddr=${{ env.TARGET }}" \
+            --env-var "releaseVer=snapshot-${{ github.event.number }}" \
+            --env-var "authServer=${{ secrets.KEYCLOAK_SERVER_REALM }}" \
+            --env-var "authClient=${{ secrets.KC_SERVICE_ACCOUNT_NAME }}" \
+            --env-var "authClient=${{ secrets.KC_SERVICE_ACCOUNT_PASS }}"
 
-  # tests-backend:
-  #   name: Backend Tests
-  #   needs:
-  #     - deploys
-  #   env:
-  #     TARGET: ${{ github.event.repository.name }}-${{ github.event.number }}-backend.apps.silver.devops.gov.bc.ca
-  #   runs-on: ubuntu-22.04
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - uses: actions/setup-node@v3
-  #       with:
-  #         node-version: 16
-  #     - run: |
-  #         # Install newman
-  #         npm install -g newman
-  #         npm install -g newman-reporter-htmlextra
-  #         mkdir -p testArtifacts
+  tests-backend:
+    name: Backend Tests
+    needs:
+      - deploys
+    env:
+      TARGET: ${{ github.event.repository.name }}-${{ github.event.number }}-backend.apps.silver.devops.gov.bc.ca
+    runs-on: ubuntu-22.04
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+      - run: |
+          # Install newman
+          npm install -g newman
+          npm install -g newman-reporter-htmlextra
+          mkdir -p testArtifacts
 
-  #     - run: |
-  #         # Run Postman Collection
-  #         newman run backend/test/postman/starting-api.postman_collection.json \
-  #           -e backend/test/postman/starting-api.postman_environment.json \
-  #           --env-var "apiAddr=${{ env.TARGET }}" \
-  #           --env-var "releaseVer=snapshot-${{ github.event.number }}" \
-  #           --env-var "authServer=${{ vars.KEYCLOAK_SERVER_REALM }}" \
-  #           --env-var "authClient=${{ vars.KC_SERVICE_ACCOUNT_NAME }}" \
-  #           --env-var "authClient=${{ secrets.KC_SERVICE_ACCOUNT_PASS }}"
+      - run: |
+          # Run Postman Collection
+          newman run backend/test/postman/starting-api.postman_collection.json \
+            -e backend/test/postman/starting-api.postman_environment.json \
+            --env-var "apiAddr=${{ env.TARGET }}" \
+            --env-var "releaseVer=snapshot-${{ github.event.number }}" \
+            --env-var "authServer=${{ vars.KEYCLOAK_SERVER_REALM }}" \
+            --env-var "authClient=${{ vars.KC_SERVICE_ACCOUNT_NAME }}" \
+            --env-var "authClient=${{ secrets.KC_SERVICE_ACCOUNT_PASS }}"
 
-  # tests-frontend:
-  #   name: Frontend Tests
-  #   env:
-  #     TARGET: ${{ github.event.repository.name }}-${{ github.event.number }}-backend.apps.silver.devops.gov.bc.ca
-  #   needs:
-  #     - deploys
-  #   continue-on-error: true
-  #   runs-on: ubuntu-22.04
-  #   timeout-minutes: 10
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - uses: actions/setup-node@v3
-  #       with:
-  #         node-version: "16"
-  #         cache: "yarn"
-  #         cache-dependency-path: frontend/yarn.lock
-  #     - name: Install dependencies
-  #       run: yarn --prefer-offline --cwd frontend
+  tests-frontend:
+    name: Frontend Tests
+    env:
+      TARGET: ${{ github.event.repository.name }}-${{ github.event.number }}-backend.apps.silver.devops.gov.bc.ca
+    needs:
+      - deploys
+    continue-on-error: true
+    runs-on: ubuntu-22.04
+    timeout-minutes: 10
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: "16"
+          cache: "yarn"
+          cache-dependency-path: frontend/yarn.lock
+      - name: Install dependencies
+        run: yarn --prefer-offline --cwd frontend
 
-  #     - name: Cypress run
-  #       uses: cypress-io/github-action@v5
-  #       with:
-  #         config: baseUrl=https://${{ env.TARGET }}
-  #         install: false
-  #         working-directory: frontend
+      - name: Cypress run
+        uses: cypress-io/github-action@v5
+        with:
+          config: baseUrl=https://${{ env.TARGET }}
+          install: false
+          working-directory: frontend
