--- a/common/openshift.init.yml
+++ b/common/openshift.init.yml
@@ -9,14 +9,15 @@ parameters:
   - name: ZONE
     description: Deployment zone, e.g. pr-### or prod
     required: true
-  - name: ORACLE_DB_PASSWORD
-    description: Oracle database password for API
-    required: true
   - name: PG_DATABASE
     description: Postgres database name
     value: database
   - name: DB_PASSWORD
     description: Password for the PostgreSQL connection user.
+    from: "[a-zA-Z0-9]{16}"
+    generate: expression
+  - name: ORACLE_DB_PASSWORD
+    description: Oracle database password for API
     from: "[a-zA-Z0-9]{16}"
     generate: expression
 objects:
