--- a/.github/workflows/pr-open.yml
+++ b/.github/workflows/pr-open.yml
@@ -42,7 +42,11 @@ jobs:
           oc_token: ${{ secrets.OC_TOKEN }}
           file: common/openshift.init.yml
           overwrite: false
-          parameters: -p ZONE=${{ github.event.number }} -p NAME=${{ github.event.repository.name }}
+          parameters:
+            -p ZONE=${{ github.event.number }}
+            -p NAME=${{ github.event.repository.name }}
+            -p ORACLE_DB_USER=${{ secrets.DB_USER }}
+            -p ORACLE_DB_PASSWORD=${{ secrets.DB_PASSWORD }}
 
   builds:
     name: Builds
