Copy oracle-api changes (#47)
* Copy oracle-api changes

* Restore Dockerfile

* chore: fix image building steps and artifact name

* ci: update deployment files for oracle-api

* ci: remove dns from docker-compose and update parameters from steps for oracle-api

* ci: update init file to add oracle user and password

* ci: fix oracle-api secret template file

---------

Co-authored-by: Ricardo Campos <ricardo.campos@encora.com>

--- a/common/openshift.init.yml
+++ b/common/openshift.init.yml
@@ -16,10 +16,12 @@ parameters:
     description: Password for the PostgreSQL connection user.
     from: "[a-zA-Z0-9]{16}"
     generate: expression
+  - name: ORACLE_DB_USER
+    description: Oracle database username for API
+    required: true
   - name: ORACLE_DB_PASSWORD
     description: Oracle database password for API
-    from: "[a-zA-Z0-9]{16}"
-    generate: expression
+    required: true
 objects:
   - apiVersion: v1
     kind: Secret
@@ -38,7 +40,8 @@ objects:
       labels:
         app: ${NAME}-${ZONE}
     stringData:
-      oracle-db-password: ${ORACLE_DB_PASSWORD}
+      oracle-user: ${ORACLE_DB_USER}
+      oracle-password: ${ORACLE_DB_PASSWORD}
   - apiVersion: networking.k8s.io/v1
     kind: NetworkPolicy
     metadata:
