--- a/.github/workflows/pr-open.yml
+++ b/.github/workflows/pr-open.yml
@@ -46,7 +46,7 @@ jobs:
             -p ZONE=${{ github.event.number }}
             -p NAME=${{ github.event.repository.name }}
             -p ORACLE_DB_USER=${{ secrets.DB_USER }}
-            -p ORACLE_DB_PASSWORD=${{ secrets.DB_PASSWORD }}
+            -p ORACLE_DB_PASSWORD='${{ secrets.DB_PASSWORD }}'
 
   builds:
     name: Builds
