fix: wrong backend api urls (#76)

--- a/.github/workflows/pr-open.yml
+++ b/.github/workflows/pr-open.yml
@@ -101,11 +101,11 @@ jobs:
             parameters:
               -p REACT_APP_SPAR_BUILD_VERSION=snapshot-${{ github.event.number }}
               -p REACT_APP_SERVER_URL=https://nr-spar-${{ github.event.number }}-backend.apps.silver.devops.gov.bc.ca
+              -p REACT_APP_ORACLE_SERVER_URL=https://nr-spar-${{ github.event.number }}-oracle-api.apps.silver.devops.gov.bc.ca
               -p REACT_APP_NRSPARWEBAPP_VERSION=dev
               -p REACT_APP_KC_URL=https://test.loginproxy.gov.bc.ca/auth
               -p REACT_APP_KC_REALM=standard
               -p REACT_APP_KC_CLIENT_ID=seed-planning-test-4296
-              -p REACT_APP_ENABLE_MOCK_SERVER=true
               -p MIN_REPLICAS=1 -p MAX_REPLICAS=1
           - name: oracle-api
             file: oracle-api/openshift.deploy.yml
