Stop using manual secrets, plus secret and variable cleanup (#74)
* Add ALLOWED_ORIGINS to code base

* Add FORESTCLIENTAPI_ADDRESS

* Add KEYCLOAK_REALM_URL

* Add FORESTCLIENTAPI_ADDRESS

* Extra backend label

* Add FORESTCLIENTAPI_KEY

* Create secret for backend

* Update SERVICE_NAME

--- a/.github/workflows/pr-open.yml
+++ b/.github/workflows/pr-open.yml
@@ -47,6 +47,7 @@ jobs:
             -p NAME=${{ github.event.repository.name }}
             -p ORACLE_DB_USER=${{ secrets.DB_USER }}
             -p ORACLE_DB_PASSWORD='${{ secrets.DB_PASSWORD }}'
+            -p FORESTCLIENTAPI_KEY='${{ secrets.FORESTCLIENTAPI_KEY }}'
 
   builds:
     name: Builds
