feat: update oracle api to native (#150)
* feat: enable oracle-api to build cloud native image

About issue #63

* feat: add cloud native support for backend

* feat: flyway log4j configuration for cloud native

About issue #63

* ci: adjust workflows for cloud native - partial

Also related to issue #63

* feat: fix healthchecks and oracle cert password

* fix: native images name when building

* feat: oracle-api native image

* chore: replace tabs by two spaces on oracle-api pom.xml file

* chore: add ending empty line on oracle-api application.properties file

* fix: oracle env config files and secrets

* fix: add missing database-cert-keystore env var

* Dockerfile adjustments

* Add oracle-cert to image promotions

---------

Co-authored-by: Derek Roberts <derek.roberts@gmail.com>

--- a/.github/workflows/pr-open.yml
+++ b/.github/workflows/pr-open.yml
@@ -55,7 +55,7 @@ jobs:
       packages: write
     strategy:
       matrix:
-        package: [backend]
+        package: [backend, oracle-api]
     name: Cloud Native Builds (${{ matrix.package }})
     runs-on: ubuntu-22.04
     env:
@@ -94,14 +94,14 @@ jobs:
       packages: write
     strategy:
       matrix:
-        package: [database, frontend, oracle-api]
+        package: [database, frontend, oracle-cert]
         include:
           - package: database
             triggers: ('database/')
           - package: frontend
             triggers: ('frontend/')
-          - package: oracle-api
-            triggers: ('oracle-api/')
+          - package: oracle-cert
+            triggers: ('oracle-cert/')
     steps:
       - uses: actions/checkout@v3
       - uses: bcgov-nr/action-builder-ghcr@v1.1.0
