--- a/.github/workflows/pr-close.yml
+++ b/.github/workflows/pr-close.yml
@@ -31,7 +31,7 @@ jobs:
     runs-on: ubuntu-22.04
     strategy:
       matrix:
-        package: [database, backend, frontend, oracle-api]
+        package: [database, backend, frontend, oracle-api, oracle-cert]
     steps:
       - uses: shrink/actions-docker-registry-tag@v3
         with:
