--- a/.github/workflows/pr-open.yml
+++ b/.github/workflows/pr-open.yml
@@ -55,7 +55,7 @@ jobs:
       packages: write
     strategy:
       matrix:
-        package: [backend, oracle-api]
+        package: [backend]
     name: Cloud Native Builds (${{ matrix.package }})
     runs-on: ubuntu-22.04
     env:
@@ -94,14 +94,14 @@ jobs:
       packages: write
     strategy:
       matrix:
-        package: [database, frontend, oracle-cert]
+        package: [database, frontend, oracle-api]
         include:
           - package: database
             triggers: ('database/')
           - package: frontend
             triggers: ('frontend/')
-          - package: oracle-cert
-            triggers: ('oracle-cert/')
+          - package: oracle-api
+            triggers: ('oracle-api/')
     steps:
       - uses: actions/checkout@v3
       - uses: bcgov-nr/action-builder-ghcr@v1.1.1
