fix: add autoscaling to oracle api (#170)
* fix: change oracle replicas from 1 to 3

* fix: add autoscaling

* fix: change averageUtilization from 100 to 80 for all services

---------

Co-authored-by: Derek Roberts <derek.roberts@gmail.com>

--- a/.github/workflows/pr-open.yml
+++ b/.github/workflows/pr-open.yml
@@ -87,7 +87,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Pushing
         run: docker push ${{ env.NAME }}
-  
+
   builds:
     name: Builds
     runs-on: ubuntu-22.04
@@ -132,7 +132,10 @@ jobs:
             file: backend/openshift.deploy.yml
             overwrite: true
             verification_path: "actuator/health"
-            parameters: -p MIN_REPLICAS=1 -p MAX_REPLICAS=1 -p BUILD=snapshot-${{ github.event.number }}
+            parameters:
+              -p MIN_REPLICAS=1
+              -p MAX_REPLICAS=1
+              -p BUILD=snapshot-${{ github.event.number }}
           - name: frontend
             file: frontend/openshift.deploy.yml
             overwrite: true
@@ -144,12 +147,16 @@ jobs:
               -p REACT_APP_KC_URL=https://test.loginproxy.gov.bc.ca/auth
               -p REACT_APP_KC_REALM=standard
               -p REACT_APP_KC_CLIENT_ID=seed-planning-test-4296
-              -p MIN_REPLICAS=1 -p MAX_REPLICAS=1
+              -p MIN_REPLICAS=1
+              -p MAX_REPLICAS=1
           - name: oracle-api
             file: oracle-api/openshift.deploy.yml
             overwrite: true
             verification_path: "actuator/health"
-            parameters: -p NR_SPAR_ORACLE_API_VERSION=snapshot-${{ github.event.number }}
+            parameters:
+              -p NR_SPAR_ORACLE_API_VERSION=snapshot-${{ github.event.number }}
+              -p MIN_REPLICAS=1
+              -p MAX_REPLICAS=1
     steps:
       - uses: bcgov-nr/action-deployer-openshift@v1.0.4
         with:
@@ -161,9 +168,9 @@ jobs:
           penetration_test: false
           verification_path: ${{ matrix.verification_path}}
           parameters:
-            -p ZONE=${{ github.event.number }} -p NAME=${{ github.event.repository.name }}
-            -p PROMOTE=${{ github.repository }}/${{ matrix.name }}:${{ github.event.number }}
-            ${{ matrix.parameters }}
+            -p ZONE=${{ github.event.number }}
+            -p NAME=${{ github.event.repository.name }}
+            -p PROMOTE=${{ github.repository }}/${{ matrix.name }}:${{ github.event.number }}${{ matrix.parameters }}
 
   # tests-api:
   #   name: API Tests
