--- a/.github/workflows/pr-open.yml
+++ b/.github/workflows/pr-open.yml
@@ -12,24 +12,15 @@ jobs:
   builds:
     name: Builds
     runs-on: ubuntu-24.04
-    outputs:
-      triggered: ${{ steps.build.outputs.triggered }}
     permissions:
       packages: write
-    strategy:
-      matrix:
-        package: [backend, frontend, oracle-api, sync]
     steps:
       - uses: bcgov-nr/action-builder-ghcr@v2.2.0
-        id: build
         with:
-          build_args: |
-            BUILD_NUMBER=${{ github.event.number }}
-            BUILDKIT_INLINE_CACHE=1
-          package: ${{ matrix.package }}
+          package: sync
           tag: ${{ github.event.number }}
           tag_fallback: latest
-          triggers: ('${{ matrix.package }}/')
+          triggers: ('sync/')
 
   deploys:
     name: Deploys (${{ github.event.number }})
@@ -37,18 +28,11 @@ jobs:
     secrets: inherit
     uses: ./.github/workflows/.deploy.yml
 
-  tests:
-    name: Tests
-    if: needs.deploys.outputs.run_tests == 'true'
-    needs: [deploys]
-    secrets: inherit
-    uses: ./.github/workflows/.tests.yml
-
   results:
     name: PR Results
     if: always()
     # Include all needs that could have failures!
-    needs: [builds, deploys, tests]
+    needs: [builds, deploys]
     runs-on: ubuntu-24.04
     steps:
       - run: |
