--- a/.github/workflows/pr-validate.yml
+++ b/.github/workflows/pr-validate.yml
@@ -9,25 +9,13 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  init:
-    name: Initialize
-    outputs:
-      mod-tag: ${{ steps.mod-tag.outputs.mod-tag }}
-    runs-on: ubuntu-24.04
-    steps:
-      - name: Get PR Number Mod 50
-        id: mod-tag
-        run: echo "mod-tag=$(( ${{ github.event.number }} % 50 ))" >> $GITHUB_OUTPUT
-
   validate:
     name: Validate PR
     needs: [init]
     uses: bcgov/quickstart-openshift-helpers/.github/workflows/.pr-validate.yml@v0.7.0
     with:
       markdown_links: |
-        - [Frontend](https://${{ github.event.repository.name }}-${{ needs.init.outputs.mod-tag }}-frontend.apps.silver.devops.gov.bc.ca/)
-        - [Backend](https://${{ github.event.repository.name }}-${{ github.event.number }}-backend.apps.silver.devops.gov.bc.ca/swagger-ui/index.html)
-        - [Oracle-API](https://${{ github.event.repository.name }}-${{ github.event.number }}-oracle-api.apps.silver.devops.gov.bc.ca/actuator/health)
+        - This application will be run as a [GitHub Action](https://github.com/${{ github.repository }}/actions)
 
   results:
     name: Validate Results
