--- a/.github/workflows/pr-close.yml
+++ b/.github/workflows/pr-close.yml
@@ -18,5 +18,5 @@ jobs:
       oc_token: ${{ secrets.OC_TOKEN }}
     with:
       cleanup: label
-      packages: backend frontend oracle-api sync
+      packages: sync
 
