--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -49,13 +49,10 @@ jobs:
     name: Promote Images
     needs: [init, deploys-prod]
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        package: [backend, frontend, oracle-api, sync]
     steps:
       - uses: shrink/actions-docker-registry-tag@v4
         with:
           registry: ghcr.io
-          repository: ${{ github.repository }}/${{ matrix.package }}
+          repository: ${{ github.repository }}/sync
           target: ${{ needs.init.outputs.pr }}
           tags: prod
