Revert "chore(ci): bring over nr-spar workflows (#3)"
This reverts commit 4e5de2f46e63e41ee4b0cd5e39b40a08cff6b76b.

--- a/sync/oradb/docker-compose.yml
+++ b/sync/oradb/docker-compose.yml
@@ -9,6 +9,7 @@
         - "1521:1521"
       # Provide passwords and other environment variables to the container
       environment:
+        ORACLE_PASSWORD: sys_user_password
         APP_USER: my_user
         APP_USER_PASSWORD: password_i_should_change
       # Customize healthcheck script options for startup
