--- a/.github/workflows/pr-open.yml
+++ b/.github/workflows/pr-open.yml
@@ -22,11 +22,12 @@ jobs:
           tag_fallback: latest
           triggers: ('sync/')
 
-  deploys:
-    name: Deploys (${{ github.event.number }})
-    needs: [builds]
-    secrets: inherit
-    uses: ./.github/workflows/.deploy.yml
+  # Will address this when move the actual sync job to this repository.
+  # deploys:
+  #   name: Deploys (${{ github.event.number }})
+  #   needs: [builds]
+  #   secrets: inherit
+  #   uses: ./.github/workflows/.deploy.yml
 
   results:
     name: PR Results
