fix: remove the deploy from the gha requirement

--- a/.github/workflows/pr-open.yml
+++ b/.github/workflows/pr-open.yml
@@ -33,7 +33,9 @@ jobs:
     name: PR Results
     if: always()
     # Include all needs that could have failures!
-    needs: [builds, deploys]
+    # remove deploys until got the actual sync job running in this repo
+    # [builds, deploys]
+    needs: [builds]
     runs-on: ubuntu-24.04
     steps:
       - run: |
