fix: update logging config

--- a/data_prep/logging.config
+++ b/data_prep/logging.config
@@ -1,5 +1,5 @@
 [loggers]
-keys=root,pull_ora_objstr
+keys=root,main_extract,main_injest,oradb_lib,docker_parser,async_loader
 
 [handlers]
 keys=consoleHandler
@@ -13,11 +13,36 @@ keys=consoleFormatter
 level=INFO
 handlers=consoleHandler
 
-[logger_pull_ora_objstr]
+[logger_main_extract]
 level=DEBUG
 handlers=consoleHandler
-qualname=pull_ora_objstr
+qualname=main_extract
 propagate=0
+
+[logger_main_injest]
+level=DEBUG
+handlers=consoleHandler
+qualname=main_injest
+propagate=0
+
+[logger_oradb_lib]
+level=DEBUG
+handlers=consoleHandler
+qualname=oradb_lib
+propagate=0
+
+[logger_docker_parser]
+level=DEBUG
+handlers=consoleHandler
+qualname=docker_parser
+propagate=0
+
+[logger_async_loader]
+level=DEBUG
+handlers=consoleHandler
+qualname=async_loader
+propagate=0
+
 
 #----- HANDLERS
 
