feat: configure object store sync

--- a/data_prep/logging.config
+++ b/data_prep/logging.config
@@ -1,5 +1,5 @@
 [loggers]
-keys=root,main_extract,main_injest,oradb_lib,docker_parser,async_loader
+keys=root,main_extract,main_injest,oradb_lib,docker_parser,async_loader,object_store,env_config
 
 [handlers]
 keys=consoleHandler
@@ -43,6 +43,17 @@ handlers=consoleHandler
 qualname=async_loader
 propagate=0
 
+[logger_object_store]
+level=DEBUG
+handlers=consoleHandler
+qualname=object_store
+propagate=0
+
+[logger_env_config]
+level=DEBUG
+handlers=consoleHandler
+qualname=env_config
+propagate=0
 
 #----- HANDLERS
 
