fix: resolve sonar code duplication

--- a/data_prep/logging.config
+++ b/data_prep/logging.config
@@ -1,5 +1,5 @@
 [loggers]
-keys=root,main_extract,main_injest,oradb_lib,docker_parser,async_loader,object_store,env_config
+keys=root,main_extract,main_injest,oradb_lib,docker_parser,async_loader,object_store,env_config,main_common
 
 [handlers]
 keys=consoleHandler
@@ -54,6 +54,13 @@ level=DEBUG
 handlers=consoleHandler
 qualname=env_config
 propagate=0
+
+[logger_main_common]
+level=DEBUG
+handlers=consoleHandler
+qualname=main_common
+propagate=0
+
 
 #----- HANDLERS
 
